syntax = "proto3";

package maps;

import "gogoproto/gogo.proto";
import "maps/permissions.proto";
import "maps/timelines.proto";
import "maps/balances.proto";

option go_package = "github.com/bitbadges/bitbadgeschain/x/maps/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateMap (MsgCreateMap) returns (MsgCreateMapResponse);
  rpc UpdateMap (MsgUpdateMap) returns (MsgUpdateMapResponse);
  rpc DeleteMap (MsgDeleteMap) returns (MsgDeleteMapResponse);
  rpc SetValues (MsgSetValues) returns (MsgSetValuesResponse);
}

message ValueStore {
  string key = 1;
  string value = 2;
  string lastSetBy = 3;
}

message MapPermissions {
  repeated TimedUpdatePermission canUpdateMetadata = 1;
  repeated TimedUpdatePermission canUpdateManager = 2;
  repeated EditApprovalPermission canUpdateEditApprovals = 3;
  repeated ActionPermission canDeleteMap = 4;
}

message EditApproval {
  string approvalId = 13;

  repeated UintRange editableTimes = 1;
  string editorListId = 2;
  string keyListId = 3;

  bool isEditable = 4;
  bool frozenIfSet = 5;

  bool expectUint = 6;
  bool expectBoolean = 7;
  bool expectAddress = 8;
  bool expectUri = 9;

  bool keyMustBeCreator = 10;

  //ID slots are only updatable by badge ID owner of this collection (>1 balance at current time)
  string mustOwnBadgeFromCollection = 11 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
  bool mustBeLastSetBy = 12;
}

message EditApprovalPermission {
  repeated UintRange editableTimes = 1;
  string keyListId = 2;
  string editorListId = 3;
  string approvalId = 4;

  repeated UintRange permanentlyPermittedTimes = 5;
  repeated UintRange permanentlyForbiddenTimes = 6;
}

message Map {
  string creator = 1;
  string mapId = 2; 

  string inheritManagerTimelineFrom = 3 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
  repeated ManagerTimeline managerTimeline = 4;

  //config options that will not change at all
  bool noDuplicates = 6;
  string defaultValue = 7;

  repeated EditApproval editApprovals = 8;
  repeated MapMetadataTimeline metadataTimeline = 9;

  MapPermissions permissions = 10;
}

message MsgCreateMap {
  string creator = 1;
  string mapId = 2; 

  string inheritManagerTimelineFrom = 3 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
  repeated ManagerTimeline managerTimeline = 4;

  //config options that will not change at all
  bool noDuplicates = 6;
  string defaultValue = 7;

  repeated EditApproval editApprovals = 8;
  repeated MapMetadataTimeline metadataTimeline = 9;

  MapPermissions permissions = 10;
}

message MsgCreateMapResponse {}

message MsgUpdateMap {
  string creator = 1;
  string mapId = 2;

  bool updateManagerTimeline = 3;
  repeated ManagerTimeline managerTimeline = 4;

  bool updateeditApprovals = 5;
  repeated EditApproval editApprovals = 6;

  bool updateMetadataTimeline = 7;
  repeated MapMetadataTimeline metadataTimeline = 8;

  bool updatePermissions = 9;
  MapPermissions permissions = 10;
}

message MsgUpdateMapResponse {}

message MsgDeleteMap {
  string creator = 1;
  string mapId = 2;
}

message MsgDeleteMapResponse {}

message SetOptions {
  bool useMostRecentCollectionId = 1;
}

message ValueToSet {
  string key = 1;
  string value = 2;
  SetOptions options = 3;
}

message MsgSetValues {
  string creator = 1;
  string mapId = 2;
  repeated ValueToSet valuesToSet = 3;
}

message MsgSetValuesResponse {}

message StorePermissions {
  repeated TimedUpdatePermission canUpdateManager = 1;
  repeated KeyEditApprovalPermission canUpdateEditApprovals = 2;
  repeated ActionPermission canDeleteStore = 3;
  repeated TimedUpdatePermission canUpdatePermissions = 4;
}

message KeyEditApproval {
  //TODO:
}

message TimelineStoreItem {
  repeated UintRange timelineTimes = 1;
  string value = 2;
}

message KeyStore {
  string key = 1;
  repeated TimelineStoreItem timelineStoreItems = 2;
  string lastSetBy = 3;
}

message MsgCreateTimedUpdateKeyStore {
  string creator = 1;
  string mapId = 2; 

  string inheritManagerTimelineFrom = 3 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
  repeated ManagerTimeline managerTimeline = 4;

  repeated KeyEditApproval editApprovals = 8;

  StorePermissions permissions = 10;

  repeated KeyStore value = 11;
}